updated measurements to use more fixed values to allow for smoother transitions(expand/collapse), may live to regret.

--- a/src/app.scss
+++ b/src/app.scss
@@ -50,7 +50,7 @@ html, body, #app {
   height: 100%;
   line-height: 1.2;
   font-weight: 400;
-  background-color: var(--black);
+  background-color: var(--slate-900);
 }
 
 *, *::before, *::after {
